# explore-osworld

./: .gitignore  README.md  pyproject.toml
docs/: desktop-env.md  summary-desktop-env.md
providers/: common.py
providers/daytona/: build-volume.md  run_bundled.py  run_volume_based.py
providers/docker/: run_bundled.py  run_volume_based.py  utils.py
template/: verify-and-entry.sh
template/bundled/: Dockerfile
template/volume-based/: Dockerfile  override-install.sh
